# clyde

./: .changie.yaml  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  build.rs  tasks.py
.changes/: 0.1.0.md  0.2.0.md  0.2.1.md  0.3.0.md  0.3.1.md  0.4.0.md  0.4.1.md  0.5.0.md  0.6.0.md  0.7.0.md  0.8.0.md  0.9.0.md  0.9.1.md
.changes/unreleased/: Added-20220715-191227.yaml  Added-20220721-091254.yaml  Added-20220729-161017.yaml  Added-20220811-102616.yaml  Added-20220928-084841.yaml  Added-20221201-234735.yaml  Added-20230131-092600.yaml  Added-20230213-192831.yaml  Added-20230313-183941.yaml  Added-20230317-190234.yaml  Added-20230409-202920.yaml  Added-20230410-161747.yaml  Added-20230627-085500.yaml  Added-20230627-085539.yaml  Added-20231219-081121.yaml  Added-20231228-130712.yaml  Added-20240224-210138.yaml  Added-20240308-082738.yaml  Added-20240328-094534.yaml  Added-20240328-100224.yaml  Added-20240605-133904.yaml  Added-20240615-124554.yaml  Added-20250303-191406.yaml  Added-20260412-115423.yaml  Added-20260514-174435.yaml  Changed-20220720-091728.yaml  Changed-20220722-082313.yaml  Changed-20220801-145604.yaml  Changed-20220823-223342.yaml  Changed-20220828-163126.yaml  Changed-20220906-232423.yaml  Changed-20221118-082702.yaml  Changed-20221227-215519.yaml  Changed-20230131-091054.yaml  Changed-20230220-212037.yaml  Changed-20230328-232630.yaml  Changed-20230401-135451.yaml  Changed-20230411-092312.yaml  Changed-20230803-093026.yaml  Changed-20231113-222319.yaml  (+34 more)
.github/workflows/: build.yml  changelog-check.yml
ci/: build-app  create-archive  functions.sh  prepare-artifacts  run-static-checks  run-tests  upload-build
completions/: _clyde  _clyde.ps1  clyde.bash  clyde.elv  clyde.fish
demo/: .gitignore  Dockerfile  README.md  demo.nash  record.sh  setup.sh
docs/: clydetools.md  creating-a-package.md  internals.md  package-file-format.md  release-check-list.md
functests/: conftest.py  file_utils.py  test-no-prefix.sh  test_install.py  test_setup.py  test_show.py  test_upgrade.py  tests.sh
src/: activate.sh.tmpl  app.rs  arch_os.rs  checksum.rs  cli.rs  create_db.sql  ctrlcutils.rs  db.rs  download.rs  exe_unpacker.rs  file_cache.rs  file_utils.rs  install.rs  lib.rs  list.rs  main.rs  package.rs  pager.rs  remove.rs  search.rs  serde_skip.rs  setup.rs  show.rs  store.rs  table.rs  test_file_utils.rs  ui.rs  uninstall.rs  unpacker.rs  update.rs  upgrade.rs  vars.rs  zip_unpacker.rs
src/cmd/: activate.sh.tmpl  doc.rs  install.rs  list.rs  mod.rs  search.rs  setup.rs  show.rs  uninstall.rs  update.rs  upgrade.rs
src/fixtures/: store_arch_os.csv  test_archive.tar  test_archive.tar.xz  test_archive.tbz2  test_exe.bz2  test_exe.xz
src/package/: fetcher_config.rs  internal_package.rs  mod.rs
src/unpacker/: exe_unpacker.rs  mod.rs  single_file_unpacker.rs  tar_unpacker.rs  unpacker_utils.rs  zip_unpacker.rs
tests/: clydetools_check.rs  common.rs  install.rs  self_upgrade.rs  test-no-prefix.sh  tests.rs  tests.sh
tests/common/: mod.rs
