[package]
name = "clyde"
version = "0.2.1"
authors = ["Aurélien Gâteau <mail@agateau.com>"]
edition = "2021"
description = "A cross-platform package manager for prebuilt applications"
documentation = "https://github.com/agateau/clyde"
readme = "README.md"
homepage = "https://github.com/agateau/clyde"
repository = "https://github.com/agateau/clyde"
license = "GPL-3.0-or-later"
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"
sha2 = "0.10.2"
hex = "0.4"
semver = "1.0.10"
directories = "4.0.1"
rusqlite = { version = "0.27.0", features = ["bundled"] }
zip = "0.6.2"
goblin = "0.5.2"
lazy_static = "1.4.0"
tempfile = "3.3.0"
shell-words = "1.1.0"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "blocking"] }
indicatif = "0.16.2"
console = { version = "0.15.1", default-features = false, features = ["ansi-parsing"] }

[dev-dependencies]
assert_fs = "1.0.1"
which = "4.2.5"
