[package]
name = "clyde"
version = "0.5.0"
authors = ["Aurélien Gâteau <mail@agateau.com>"]
edition = "2021"
description = "A cross-platform package manager for prebuilt applications"
documentation = "https://github.com/agateau/clyde"
readme = "README.md"
homepage = "https://github.com/agateau/clyde"
repository = "https://github.com/agateau/clyde"
license = "GPL-3.0-or-later"
categories = ["command-line-utilities"]
autotests = false

[[test]]
name = "integration"
path = "tests/tests.rs"

[dependencies]
anyhow = "1.0.64"
clap = { version = "4.2.0", features = ["derive"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.11"
sha2 = "0.10.5"
hex = "0.4.3"
semver = "1.0.13"
directories = "4.0.1"
rusqlite = { version = "0.28.0", features = ["bundled"] }
zip = "0.6.2"
goblin = "0.5.4"
lazy_static = "1.4.0"
tempfile = "3.3.0"
shell-words = "1.1.0"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "blocking"] }
indicatif = "0.17.0"
console = { version = "0.15.1", default-features = false, features = ["ansi-parsing"] }
regex = "1.6.0"
archiver-rs = { version = "0.5.1", default-features = false, features = ["bzip", "gzip", "xz"] }
single-instance = "0.3.3"

[dev-dependencies]
assert_fs = "1.0.7"
which = "4.3.0"
