[package]
name = "clyde"
version = "0.6.0"
authors = ["Aurélien Gâteau <mail@agateau.com>"]
edition = "2021"
description = "A cross-platform package manager for prebuilt applications"
documentation = "https://github.com/agateau/clyde"
readme = "README.md"
homepage = "https://github.com/agateau/clyde"
repository = "https://github.com/agateau/clyde"
license = "GPL-3.0-or-later"
categories = ["command-line-utilities"]
autotests = false

[[test]]
name = "integration"
path = "tests/tests.rs"

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.0", features = ["derive"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.19"
sha2 = "0.10.6"
hex = "0.4.3"
semver = "1.0.17"
directories = "5.0.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
zip = "0.6.4"
goblin = "0.6.1"
lazy_static = "1.4.0"
tempfile = "3.5.0"
shell-words = "1.1.0"
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls", "blocking"] }
indicatif = "0.17.3"
console = { version = "0.15.5", default-features = false, features = ["ansi-parsing"] }
regex = "1.7.3"
archiver-rs = { version = "0.5.1", default-features = false, features = ["bzip", "gzip", "xz"] }
single-instance = "0.3.3"
boa_engine = { version = "0.17.3", features = ["deser", "trace"] }
boa_runtime = "0.17.3"
dialoguer = { version = "0.11.0", default-features = false }
glob-match = "0.2.1"
which = "4.4.0"
open = "5.1.2"

[build-dependencies]
clap = { version = "4.2.0", features = ["derive"] }
clap_complete = { version = "4.2.0" }

[dev-dependencies]
assert_fs = "1.0.12"
